--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,9 @@ services:
   order-service:
     build:
       context: .
-      dockerfile: ./services/order/Dockerfile
+      dockerfile: Dockerfile
+      args:
+        SERVICE_DIR: order
     container_name: order-service
     ports:
       - "8000:8000"
@@ -31,6 +33,7 @@ services:
       - PAYMENT_SERVICE_URL=http://payment-service:8002
       - SHIPPING_SERVICE_URL=http://shipping-service:8003
       - NOTIFICATION_SERVICE_URL=http://notification-service:8004
+      - PORT=8000
     depends_on:
       - mongodb
     networks:
@@ -39,13 +42,16 @@ services:
   inventory-service:
     build:
       context: .
-      dockerfile: ./services/inventory/Dockerfile
+      dockerfile: Dockerfile
+      args:
+        SERVICE_DIR: inventory
     container_name: inventory-service
     ports:
       - "8001:8001"
     environment:
       - MONGO_URI=mongodb://mongodb:27017
       - MONGO_DB=ecommerce_saga
+      - PORT=8001
     depends_on:
       - mongodb
     networks:
@@ -54,13 +60,16 @@ services:
   payment-service:
     build:
       context: .
-      dockerfile: ./services/payment/Dockerfile
+      dockerfile: Dockerfile
+      args:
+        SERVICE_DIR: payment
     container_name: payment-service
     ports:
       - "8002:8002"
     environment:
       - MONGO_URI=mongodb://mongodb:27017
       - MONGO_DB=ecommerce_saga
+      - PORT=8002
     depends_on:
       - mongodb
     networks:
@@ -69,13 +78,16 @@ services:
   shipping-service:
     build:
       context: .
-      dockerfile: ./services/shipping/Dockerfile
+      dockerfile: Dockerfile
+      args:
+        SERVICE_DIR: shipping
     container_name: shipping-service
     ports:
       - "8003:8003"
     environment:
       - MONGO_URI=mongodb://mongodb:27017
       - MONGO_DB=ecommerce_saga
+      - PORT=8003
     depends_on:
       - mongodb
     networks:
@@ -84,13 +96,16 @@ services:
   notification-service:
     build:
       context: .
-      dockerfile: ./services/notification/Dockerfile
+      dockerfile: Dockerfile
+      args:
+        SERVICE_DIR: notification
     container_name: notification-service
     ports:
       - "8004:8004"
     environment:
       - MONGO_URI=mongodb://mongodb:27017
       - MONGO_DB=ecommerce_saga
+      - PORT=8004
     depends_on:
       - mongodb
     networks:
