--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,54 @@
-rich==13.7.0 annotated-types==0.7.0
+aiofiles==24.1.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.10.11
+aiosignal==1.3.2
+alembic==1.16.1
+annotated-types==0.7.0
 anyio==3.7.1
 asgiref==3.8.1
+attrs==25.3.0
+babel==2.17.0
+backrefs==5.8
+black==25.1.0
 certifi==2025.4.26
 charset-normalizer==3.4.2
 click==8.2.1
+colorama==0.4.6
+configparser==7.1.0
+coverage==7.8.2
 decorator==5.2.1
 Deprecated==1.2.18
 dnspython==2.7.0
+execnet==2.1.1
+Faker==28.4.1
 fastapi==0.104.1
+flake8==7.2.0
+frozenlist==1.6.2
+ghp-import==2.1.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.25.1
 idna==3.10
 importlib-metadata==6.11.0
+iniconfig==2.1.0
+isort==6.0.1
+Jinja2==3.1.6
+Mako==1.3.10
+Markdown==3.8
 markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mccabe==0.7.0
 mdurl==0.1.2
+mergedeep==1.3.4
+mkdocs==1.6.1
+mkdocs-get-deps==0.2.0
+mkdocs-material==9.6.14
+mkdocs-material-extensions==1.3.1
 motor==3.3.1
+multidict==6.4.4
+mypy==1.16.0
+mypy_extensions==1.1.0
+numpy==2.1.2
 opentelemetry-api==1.21.0
 opentelemetry-instrumentation==0.42b0
 opentelemetry-instrumentation-asgi==0.42b0
@@ -23,23 +56,50 @@ opentelemetry-instrumentation-fastapi==0.42b0
 opentelemetry-sdk==1.21.0
 opentelemetry-semantic-conventions==0.42b0
 opentelemetry-util-http==0.42b0
+packaging==25.0
+paginate==0.5.7
+pandas==2.2.3
+pathspec==0.12.1
+platformdirs==4.3.8
+pluggy==1.6.0
 prometheus-client==0.19.0
+propcache==0.3.1
 py==1.11.0
+pycodestyle==2.13.0
 pydantic==2.4.2
 pydantic-settings==2.1.0
 pydantic_core==2.10.1
+pyflakes==3.3.2
 Pygments==2.19.1
 PyJWT==2.8.0
+pymdown-extensions==10.15
 pymongo==4.6.0
+pymongo-migrate==1.0.0
+pytest==8.3.2
+pytest-asyncio==0.23.8
+pytest-cov==6.1.1
+pytest-mock==3.14.1
+pytest-xdist==3.7.0
+python-dateutil==2.9.0
 python-dotenv==1.0.0
 python-json-logger==2.0.7
+pytz==2025.2
+PyYAML==6.0.2
+pyyaml_env_tag==1.1
 requests==2.32.3
 retry==0.9.2
 rich==14.0.0
+six==1.17.0
 sniffio==1.3.1
+SQLAlchemy==2.0.41
 starlette==0.27.0
+structlog==24.4.0
+tabulate==0.9.0
 typing_extensions==4.14.0
+tzdata==2025.2
 urllib3==2.4.0
 uvicorn==0.23.2
+watchdog==6.0.0
 wrapt==1.17.2
+yarl==1.20.0
 zipp==3.22.0
