contains only docker deployment not k8s

--- a/deployments/docker/Dockerfile
+++ b/deployments/docker/Dockerfile
@@ -7,26 +7,22 @@ RUN apt-get update && apt-get install -y \
     build-essential \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy common requirements first to leverage Docker cache
-COPY common/requirements.txt ./common/requirements.txt
+# Copy requirements first to leverage Docker cache
+COPY config/requirements.txt ./config/requirements.txt
 
 # Install dependencies
-RUN pip install --no-cache-dir -r ./common/requirements.txt \
+RUN pip install --no-cache-dir -r ./config/requirements.txt \
     && pip install --no-cache-dir \
     opentelemetry-api==1.21.0 \
     opentelemetry-sdk==1.21.0 \
     opentelemetry-instrumentation-fastapi==0.42b0 \
     opentelemetry-exporter-otlp-proto-grpc==1.21.0
 
-# Copy common modules
-COPY common ./common
-
-# Copy coordinator (needed by order service)
-COPY coordinator ./coordinator
+# Copy source code
+COPY src ./src
 
 # Copy the service specified at build time
 ARG SERVICE_DIR
-COPY services/${SERVICE_DIR} ./services/${SERVICE_DIR}
 
 # Set environment variables
 ENV SERVICE_NAME=${SERVICE_DIR}
@@ -35,4 +31,9 @@ ENV PYTHONPATH=/app
 ENV PORT=8000
 
 # Command to run the service using the PORT environment variable
-CMD uvicorn services.${SERVICE_DIR}.main:app --host 0.0.0.0 --port ${PORT} 
+# Handle coordinator vs services differently
+CMD if [ "$SERVICE_DIR" = "coordinator" ]; then \
+        uvicorn src.coordinator.main:app --host 0.0.0.0 --port ${PORT}; \
+    else \
+        uvicorn src.services.${SERVICE_DIR}.main:app --host 0.0.0.0 --port ${PORT}; \
+    fi 
