--- a/src/common/requirements.txt
+++ b/src/common/requirements.txt
@@ -13,4 +13,6 @@ prometheus-client==0.19.0
 opentelemetry-api==1.21.0
 opentelemetry-sdk==1.21.0
 opentelemetry-instrumentation-fastapi==0.42b0
-opentelemetry-exporter-otlp-proto-grpc==1.21.0 
+opentelemetry-exporter-otlp-proto-grpc==1.21.0
+redis==5.0.1
+aioredis==2.0.1 
